Replaced moon graphic, fixed resume link not showing in dark mode

--- a/styles/shared/Nav.module.css
+++ b/styles/shared/Nav.module.css
@@ -114,6 +114,10 @@
   transform: scale(0.98);
 }
 
+.resumeLink {
+  color: var(--themeTextColor);
+}
+
 .navigation.open {
   position: absolute;
   flex-direction: column;
